--- a/package.json
+++ b/package.json
@@ -15,26 +15,33 @@
     "pub": "lerna exec -- npm run publish"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@aryth/rand": "^0.1.4",
+    "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.8.3",
     "@babel/plugin-proposal-private-methods": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/register": "^7.8.3",
-    "@babel/runtime": "^7.8.7",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
-    "@spare/logger": "^0.1.13",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.6",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@spare/bracket": "^0.6.2",
+    "@spare/deco-util": "^0.6.2",
+    "@spare/enum-chars": "^0.6.2",
+    "@spare/logger": "^0.6.2",
+    "@typen/num-loose": "^0.1.0",
     "lerna": "^3.20.2",
-    "rollup": "^2.0.5",
+    "rollup": "^2.8.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-fileinfo": "^0.1.4",
+    "rollup-plugin-filesize": "^8.0.2",
     "rollup-plugin-progress": "^1.1.1",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "^5.3.0",
+    "xregexp": "^4.3.0"
   }
 }
